[cleanup] Fix up deprecated code